--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <h4>The services sector is a powerhouse of economic activity, contributing significantly to the nation's GDP. This sector encompasses a wide range of industries, including finance, healthcare, and technology, which collectively drive economic growth and job creation.</h4>
     <br>
-    <h4>The steady rise in GDP shows that our economy is growing fast, making us wonder if this trend will keep up in the future. Our economy is always changing, which sparks curiosity and raises questions about what lies ahead.</h4>
+    <h4>The steady rise in GDP shows that our economy is growing fast, making us wonder if this trend will keep up in the future.</h4>
     <br><br><br>
 </div>
 
@@ -145,7 +145,9 @@
 </div>
 <div id="bar-seq"></div>
 <div class="w3-content">
-    <h4>General merchandise imports, which include a wide range of goods such as electronics, clothing, and machinery, have consistently outpaced other categories of imports and exports. On the other hand, foods and beverages remain a relatively small portion of the trade balance, reflecting the US's reliance on local food production and consumption.</h4>
+    <h4>General merchandise imports, which include a wide range of goods such as electronics, clothing, and machinery, have consistently outpaced other categories of imports and exports. This is due to the internet's impact on globalization and increased consumer demand for a wider variety of affordable goods.</h4>
+    <br>
+    <h4>On the other hand, foods and beverages remain a relatively small portion of the trade balance, reflecting the US's reliance on local food production and consumption.</h4>
     <br><br><br>
 </div>
 
@@ -164,9 +166,7 @@
 </div>
 <div id="bar-div"></div>
 <div class="w3-content">
-    <h4>Negative inflation rates can be bad because they can lead to deflation, where prices continue to fall. Deflation can discourage spending because people expect prices to keep dropping, which can hurt businesses and lead to job losses.</h4>
-    <br>
-    <h4>On the other hand, moderate inflation encourages spending and investment, while also allowing for gradual wage increases.</h4>
+    <h4>Post COVID-19, the US economy has experienced a surge in inflation due to disrupted supply chains, surging demands, war in Ukraine, and rising energy prices. This raises concerns about the impact on the housing market. Along with tech layoffs and economic transformations in cities like San Francisco, the inflation rate has become a critical issue for many Americans.</h4>
     <br>
     <hr>
 </div>
@@ -177,7 +177,7 @@
     <div id="line"></div>
 </div>
 <div class="w3-content">
-    <h4>Minimum wage is a critical issue that affects millions of workers across the country. The stagnation of minimum wage over the past decade raises concerns about income inequality and the ability of workers to make ends meet. As the cost of living continues to rise, the lack of growth in minimum wage has left many workers struggling to keep up with inflation and maintain a decent standard of living.</h4>
+    <h4>Minimum wage is a critical issue that affects millions of workers across the country. As the cost of living continues to rise, the lack of growth in minimum wage has left many workers struggling to keep up with inflation and maintain a decent standard of living, especially as the income disparity between the rich and poor continues to widen.</h4>
     <br>
     <hr>
 </div>
